Test/errors/err_enum_non_constant.cb
expect_error("enum value must be a constant integer expression") {
    enum BadEnum : int { A = 1, B = "hello" };
}

extern int main()
{
    return 0;
}
